--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -73,19 +73,19 @@
       <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
   </div>
   
-     <section class="bottom">
+     <section class="index-bottom">
     
-     <div class="bottom-content"> 
+     <div class="index-bottom-content"> 
     <h3>  Services </h3>
     <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
   
-    <div class="bottom-content"> 
+    <div class="index-bottom-content"> 
     <h3>Product</h3>
     Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
   </div>
   
-    <div class="bottom-content"> 
+    <div class="index-bottom-content"> 
     <h3>Vision</h3>
     Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.
   </div>
